src/flow/lang/Parser.cc
// This file is part of the "x0" project, http://github.com/christianparpart/x0>
//   (c) 2009-2018 Christian Parpart <christian@parpart.family>
//
// Licensed under the MIT License (the "License"); you may not use this
// file except in compliance with the License. You may obtain a copy of
// the License at: http://opensource.org/licenses/MIT

#include <flow/NativeCallback.h>
#include <flow/lang/AST.h>
#include <flow/lang/Lexer.h>
#include <flow/lang/Parser.h>
#include <flow/vm/Runtime.h>
#include <unordered_map>
#include <memory>

namespace flow::lang {
  enum class OpSig {
    Invalid,
    BoolBool,
    NumNum,
    StringString,
    StringRegexp,
    IpIp,
    IpCidr,
    CidrCidr,
  };
}

namespace std {
  template <>
  struct hash<flow::lang::OpSig> {
    uint32_t operator()(flow::lang::OpSig v) const noexcept {
      return static_cast<uint32_t>(v);
    }
  };
}

namespace flow::lang {

// {{{ scoped(SCOPED_SYMBOL)
class Parser::Scope {
 private:
  Parser* parser_;
  SymbolTable* table_;
  bool flipped_;

 public:
  Scope(Parser* parser, SymbolTable* table)
      : parser_(parser), table_(table), flipped_(false) {
    parser_->enterScope(table_);
  }

  Scope(Parser* parser, ScopedSym* symbol)
      : parser_(parser), table_(symbol->scope()), flipped_(false) {
    parser_->enterScope(table_);
  }

  Scope(Parser* parser, std::unique_ptr<SymbolTable>& table)
      : parser_(parser), table_(table.get()), flipped_(false) {
    parser_->enterScope(table_);
  }

  template <typename T>
  Scope(Parser* parser, std::unique_ptr<T>& symbol)
      : parser_(parser), table_(symbol->scope()), flipped_(false) {
    parser_->enterScope(table_);
  }

  bool flip() {
    flipped_ = !flipped_;
    return flipped_;
  }

  Scope(const Scope&) = delete;
  Scope(Scope&&) = delete;
  Scope& operator=(const Scope&) = delete;
  Scope& operator=(Scope&&) = delete;

  ~Scope() { parser_->leaveScope(); }
};
#define scoped(SCOPED_SYMBOL) \
  for (Parser::Scope _(this, (SCOPED_SYMBOL)); _.flip();)
// }}}

Parser::Parser(std::set<Feature> features,
               diagnostics::Report* report,
               Runtime* runtime,
               ImportHandler importHandler)
    : features_{std::move(features)},
      report_{*report},
      lexer_{std::make_unique<Lexer>(report)},
      scopeStack_{nullptr},
      runtime_{runtime},
      importHandler_{std::move(importHandler)} {
  // enterScope("global");
}

Parser::~Parser() {
  // leaveScope();
  // assert(scopeStack_ == nullptr && "scopeStack not properly unwind. probably
  // a bug.");
}

void Parser::openString(const std::string& content) {
  lexer_->openString(content);
}

void Parser::openLocalFile(const std::string& filename) {
  lexer_->openLocalFile(filename);
}

void Parser::openStream(std::unique_ptr<std::istream>&& ifs,
                            const std::string& filename) {
  lexer_->openStream(std::move(ifs), filename);
}

std::unique_ptr<SymbolTable> Parser::enterScope(const std::string& title) {
  // printf("Parser::enterScope(): new top: %p \"%s\" (outer: %p \"%s\")\n", scope,
  // scope->name().c_str(), scopeStack_, scopeStack_ ?
  // scopeStack_->name().c_str() : "");

  auto st = std::make_unique<SymbolTable>(currentScope(), title);
  st->setOuterTable(scopeStack_);
  scopeStack_ = st.get();
  return st;
}

SymbolTable* Parser::enterScope(SymbolTable* scope) {
  // printf("Parser::enterScope(): new top: %p \"%s\" (outer: %p \"%s\")\n", scope,
  // scope->name().c_str(), scopeStack_, scopeStack_ ?
  // scopeStack_->name().c_str() : "");

  scope->setOuterTable(scopeStack_);
  scopeStack_ = scope;

  return scope;
}

SymbolTable* Parser::globalScope() const {
  if (SymbolTable* st = scopeStack_; st != nullptr) {
    while (st->outerTable()) {
      st = st->outerTable();
    }
    return st;
  }
  return nullptr;
}

SymbolTable* Parser::leaveScope() {
  SymbolTable* popped = scopeStack_;
  scopeStack_ = scopeStack_->outerTable();

  // printf("Parser::leaveScope(): new top: %p \"%s\" (outer: %p \"%s\")\n", popped,
  // popped->name().c_str(), scopeStack_, scopeStack_ ?
  // scopeStack_->name().c_str() : "");

  return popped;
}

std::unique_ptr<UnitSym> Parser::parse() {
  return unit();
}

// {{{ type system
/**
 * Computes VM opcode for binary operation.
 *
 * @param token operator between left and right expression
 * @param left left hand expression
 * @param right right hand expression
 *
 * @return opcode that matches given expressions operator or EXIT if operands
 *incompatible.
 */
Opcode makeOperator(Token token, Expr* left, Expr* right) {
  // (bool, bool)     == !=
  // (num, num)       + - * / % ** << >> & | ^ and or xor == != <= >= < >
  // (string, string) + == != <= >= < > =^ =$ in
  // (string, regex)  =~
  // (ip, ip)         == !=
  // (ip, cidr)       in
  // (cidr, cidr)     == != in

  auto isString = [](LiteralType t) { return t == LiteralType::String; };
  auto isNumber = [](LiteralType t) { return t == LiteralType::Number; };
  auto isBool = [](LiteralType t) { return t == LiteralType::Boolean; };
  auto isIPAddr = [](LiteralType t) { return t == LiteralType::IPAddress; };
  auto isCidr = [](LiteralType t) { return t == LiteralType::Cidr; };
  auto isRegExp = [](LiteralType t) { return t == LiteralType::RegExp; };

  LiteralType leftType = left->getType();
  LiteralType rightType = right->getType();

  OpSig opsig = OpSig::Invalid;
  if (isBool(leftType) && isBool(rightType))
    opsig = OpSig::BoolBool;
  else if (isNumber(leftType) && isNumber(rightType))
    opsig = OpSig::NumNum;
  else if (isString(leftType) && isString(rightType))
    opsig = OpSig::StringString;
  else if (isString(leftType) && isRegExp(rightType))
    opsig = OpSig::StringRegexp;
  else if (isIPAddr(leftType) && isIPAddr(rightType))
    opsig = OpSig::IpIp;
  else if (isIPAddr(leftType) && isCidr(rightType))
    opsig = OpSig::IpCidr;
  else if (isCidr(leftType) && isCidr(rightType))
    opsig = OpSig::CidrCidr;

  static const std::unordered_map<OpSig, std::unordered_map<Token, Opcode>>
  ops = {{OpSig::BoolBool,
          {{Token::Equal, Opcode::NCMPEQ},
           {Token::UnEqual, Opcode::NCMPNE},
           {Token::And, Opcode::BAND},
           {Token::Or, Opcode::BOR},
           {Token::Xor, Opcode::BXOR}, }},
         {OpSig::NumNum,
          {{Token::Plus, Opcode::NADD},
           {Token::Minus, Opcode::NSUB},
           {Token::Mul, Opcode::NMUL},
           {Token::Div, Opcode::NDIV},
           {Token::Mod, Opcode::NREM},
           {Token::Pow, Opcode::NPOW},
           {Token::Shl, Opcode::NSHL},
           {Token::Shr, Opcode::NSHR},
           {Token::BitAnd, Opcode::NAND},
           {Token::BitOr, Opcode::NOR},
           {Token::BitXor, Opcode::NXOR},
           {Token::Equal, Opcode::NCMPEQ},
           {Token::UnEqual, Opcode::NCMPNE},
           {Token::LessOrEqual, Opcode::NCMPLE},
           {Token::GreaterOrEqual, Opcode::NCMPGE},
           {Token::Less, Opcode::NCMPLT},
           {Token::Greater, Opcode::NCMPGT}, }},
         {OpSig::StringString,
          {{Token::Plus, Opcode::SADD},
           {Token::Equal, Opcode::SCMPEQ},
           {Token::UnEqual, Opcode::SCMPNE},
           {Token::LessOrEqual, Opcode::SCMPLE},
           {Token::GreaterOrEqual, Opcode::SCMPGE},
           {Token::Less, Opcode::SCMPLT},
           {Token::Greater, Opcode::SCMPGT},
           {Token::PrefixMatch, Opcode::SCMPBEG},
           {Token::SuffixMatch, Opcode::SCMPEND},
           {Token::In, Opcode::SCONTAINS}, }},
         {OpSig::StringRegexp, {{Token::RegexMatch, Opcode::SREGMATCH}, }},
         {OpSig::IpIp,
          {{Token::Equal, Opcode::PCMPEQ},
           {Token::UnEqual, Opcode::PCMPNE}, }},
         {OpSig::IpCidr, {{Token::In, Opcode::PINCIDR}, }},
         {OpSig::CidrCidr,
          {{Token::Equal, Opcode::NOP},    // TODO
           {Token::UnEqual, Opcode::NOP},  // TODO
           {Token::In, Opcode::NOP},       // TODO
          }}, };

  auto a = ops.find(opsig);
  if (a == ops.end()) return Opcode::EXIT;

  auto b = a->second.find(token);
  if (b == a->second.end()) return Opcode::EXIT;

  return b->second;
}

/**
 * Casts given epxression into an expression of fixed type.
 *
 * @param source source expression to cast
 * @param target target (token) type to cast to.
 */
Opcode makeOperator(Token target, Expr* source) {
  static const std::unordered_map<LiteralType,
                                  std::unordered_map<Token, Opcode>> ops =
      {{LiteralType::Number,
        {{Token::Not, Opcode::NCMPZ},
         {Token::BitNot, Opcode::NNOT},
         {Token::Minus, Opcode::NNEG},
         {Token::StringType, Opcode::N2S},
         {Token::BoolType, Opcode::NCMPZ},
         {Token::NumberType, Opcode::NOP}, }},
       {LiteralType::Boolean,
        {{Token::Not, Opcode::BNOT},
         {Token::BoolType, Opcode::NOP},
         {Token::StringType, Opcode::N2S},  // XXX or better print "true" | "false" ?
        }},
       {LiteralType::String,
        {{Token::Not, Opcode::SISEMPTY},
         {Token::NumberType, Opcode::S2N},
         {Token::StringType, Opcode::NOP}, }},
       {LiteralType::IPAddress, {{Token::StringType, Opcode::P2S}, }},
       {LiteralType::Cidr, {{Token::StringType, Opcode::C2S}, }},
       {LiteralType::RegExp, {{Token::StringType, Opcode::R2S}, }}, };

  LiteralType sourceType = source->getType();

  auto a = ops.find(sourceType);
  if (a == ops.end()) return Opcode::EXIT;

  auto b = a->second.find(target);
  if (b == a->second.end()) return Opcode::EXIT;

  return b->second;
}
// }}}
// {{{ lexing
Token Parser::nextToken() const { return lexer_->nextToken(); }

bool Parser::expect(Token value) {
  if (token() != value) {
    report_.syntaxError(lastLocation(),
                        "Unexpected token '{}' (expected: '{}')",
                        token(), value);
    return false;
  }
  return true;
}

bool Parser::consume(Token value) {
  if (!expect(value)) return false;

  nextToken();
  return true;
}

bool Parser::consumeIf(Token value) {
  if (token() == value) {
    nextToken();
    return true;
  } else {
    return false;
  }
}

bool Parser::consumeUntil(Token value) {
  for (;;) {
    if (token() == value) {
      nextToken();
      return true;
    }

    if (token() == Token::Eof) return false;

    nextToken();
  }
}
// }}}
// {{{ decls
std::unique_ptr<UnitSym> Parser::unit() {
  auto unit = std::make_unique<UnitSym>();

  scoped(unit) {
    importRuntime();

    while (token() == Token::Import) {
      if (!importDecl(unit.get())) {
        return nullptr;
      }
    }

    while (std::unique_ptr<Symbol> symbol = decl()) {
      if (!dynamic_cast<VariableSym*>(symbol.get())) {
        currentScope()->appendSymbol(std::move(symbol));
      } else if (hasFeature(Feature::GlobalScope)) {
        currentScope()->appendSymbol(std::move(symbol));
      } else {
        report_.syntaxError(symbol->location(), "Global-scope feature not enabled.");
      }
    }
  }

  return unit;
}

void Parser::importRuntime() {
  if (runtime_) {
    for (const auto& builtin : runtime_->builtins()) {
      declareBuiltin(builtin);
    }
  }
}

void Parser::declareBuiltin(const NativeCallback* native) {
  if (native->isHandler()) {
    createSymbol<BuiltinHandlerSym>(*native);
  } else {
    createSymbol<BuiltinFunctionSym>(*native);
  }
}

std::unique_ptr<Symbol> Parser::decl() {
  switch (token()) {
    case Token::Var:
      return varDecl();
    case Token::Handler:
      return handlerDecl(true);
    case Token::Ident:
      return handlerDecl(false);
    default:
      return nullptr;
  }
}

// 'var' IDENT ['=' EXPR] ';'
std::unique_ptr<VariableSym> Parser::varDecl() {
  SourceLocation loc(lexer_->location());

  if (!consume(Token::Var)) return nullptr;

  if (!consume(Token::Ident)) return nullptr;

  std::string name = stringValue();

  if (!consume(Token::Assign)) return nullptr;

  std::unique_ptr<Expr> initializer = expr();
  if (!initializer) return nullptr;

  loc.update(initializer->location().end);
  consume(Token::Semicolon);

  return std::make_unique<VariableSym>(name, std::move(initializer), loc);
}

bool Parser::importDecl(UnitSym* unit) {
  // 'import' NAME_OR_NAMELIST ['from' PATH] ';'
  nextToken();  // skip 'import'

  std::list<std::string> names;
  if (!importOne(names)) {
    consumeUntil(Token::Semicolon);
    return false;
  }

  while (token() == Token::Comma) {
    nextToken();
    if (!importOne(names)) {
      consumeUntil(Token::Semicolon);
      return false;
    }
  }

  std::string path;
  if (consumeIf(Token::From)) {
    path = stringValue();

    if (!consumeOne(Token::String, Token::RawString)) {
      consumeUntil(Token::Semicolon);
      return false;
    }

    if (!path.empty() && path[0] != '/') {
      std::string base(lexer_->location().filename);

      size_t r = base.rfind('/');
      if (r != std::string::npos) ++r;

      base = base.substr(0, r);
      path = base + path;
    }
  }

  for (const std::string& name: names) {
    std::vector<NativeCallback*> builtins;

    if (importHandler_ && !importHandler_(name, path, &builtins))
      return false;

    unit->import(name, path);

    for (NativeCallback* native : builtins) {
      declareBuiltin(native);
    }
  }

  consume(Token::Semicolon);
  return true;
}

bool Parser::importOne(std::list<std::string>& names) {
  switch (token()) {
    case Token::Ident:
    case Token::String:
    case Token::RawString:
      names.push_back(stringValue());
      nextToken();
      break;
    case Token::RndOpen:
      nextToken();
      if (!importOne(names)) return false;

      while (token() == Token::Comma) {
        nextToken();  // skip comma
        if (!importOne(names)) return false;
      }

      if (!consume(Token::RndClose)) return false;
      break;
    default:
      report_.syntaxError(lastLocation(), "Syntax error in import declaration. Unexpected token {}.", token());
      return false;
  }
  return true;
}

// handlerDecl ::= 'handler' IDENT (';' | [do] stmt)
std::unique_ptr<HandlerSym> Parser::handlerDecl(bool keyword) {
  SourceLocation loc(location());

  if (keyword) {
    nextToken();  // 'handler'
  }

  consume(Token::Ident);
  std::string name = stringValue();
  if (consumeIf(Token::Semicolon)) {  // forward-declaration
    loc.update(end());
    return std::make_unique<HandlerSym>(name, loc);
  }

  std::unique_ptr<SymbolTable> st = enterScope("handler-" + name);
  std::unique_ptr<Stmt> body = stmt();
  leaveScope();

  if (!body) return nullptr;

  loc.update(body->location().end);

  // forward-declared / previousely -declared?
  if (HandlerSym* handler = currentScope()->lookup<HandlerSym>(name, Lookup::Self)) {
    if (handler->body() != nullptr) {
      // TODO say where we found the other hand, compared to this one.
      report_.typeError(lastLocation(), "Redeclaring handler \"{}\"", handler->name());
      return nullptr;
    }
    handler->implement(std::move(st), std::move(body));
    handler->owner()->removeSymbol(handler);
    return std::unique_ptr<HandlerSym>(handler);
  }

  return std::make_unique<HandlerSym>(name, std::move(st), std::move(body), loc);
}
// }}}
// {{{ expr
std::unique_ptr<Expr> Parser::expr() {
  return logicExpr();
}

std::unique_ptr<Expr> Parser::logicExpr() {
  std::unique_ptr<Expr> lhs = notExpr();
  if (!lhs) return nullptr;

  for (;;) {
    switch (token()) {
      case Token::And:
      case Token::Xor:
      case Token::Or: {
        Token binop = token();
        nextToken();

        std::unique_ptr<Expr> rhs = notExpr();
        if (!rhs) return nullptr;

        Opcode opc = makeOperator(binop, lhs.get(), rhs.get());
        if (opc == Opcode::EXIT) {
          report_.typeError(
              lastLocation(),
              "Incompatible binary expression operands ({} {} {}).",
              lhs->getType(), binop, rhs->getType());
          return nullptr;
        }

        lhs = std::make_unique<BinaryExpr>(opc, std::move(lhs), std::move(rhs));
        break;
      }
      default:
        return lhs;
    }
  }
}

std::unique_ptr<Expr> Parser::notExpr() {
  size_t nots = 0;

  SourceLocation loc = location();

  while (consumeIf(Token::Not)) nots++;

  std::unique_ptr<Expr> subExpr = relExpr();
  if (!subExpr) return nullptr;

  if ((nots % 2) == 0) return subExpr;

  Opcode op = makeOperator(Token::Not, subExpr.get());
  if (op == Opcode::EXIT) {
    report_.typeError(
        lastLocation(),
        "Type cast error in unary 'not'-operator. Invalid source type <{}>.",
        subExpr->getType());
    return nullptr;
  }

  return std::make_unique<UnaryExpr>(op, std::move(subExpr), loc.update(end()));
}

std::unique_ptr<Expr> Parser::relExpr() {
  std::unique_ptr<Expr> lhs = addExpr();
  if (!lhs)
    return nullptr;

  switch (token()) {
    case Token::Equal:
    case Token::UnEqual:
    case Token::Less:
    case Token::Greater:
    case Token::LessOrEqual:
    case Token::GreaterOrEqual:
    case Token::PrefixMatch:
    case Token::SuffixMatch:
    case Token::RegexMatch:
    case Token::In: {
      Token binop = token();
      nextToken();

      std::unique_ptr<Expr> rhs = addExpr();
      if (!rhs) return nullptr;

      Opcode opc = makeOperator(binop, lhs.get(), rhs.get());
      if (opc == Opcode::EXIT) {
        report_.typeError(lastLocation(),
                          "Incompatible binary expression ({} in {}).",
                          lhs->getType(), rhs->getType());
        return nullptr;
      }

      lhs = std::make_unique<BinaryExpr>(opc, std::move(lhs), std::move(rhs));
      return lhs;
    }
    default:
      return lhs;
  }
}

std::unique_ptr<Expr> Parser::addExpr() {
  std::unique_ptr<Expr> lhs = mulExpr();
  if (!lhs) return nullptr;

  for (;;) {
    switch (token()) {
      case Token::Plus:
      case Token::Minus: {
        Token binop = token();
        nextToken();

        std::unique_ptr<Expr> rhs = mulExpr();
        if (!rhs) return nullptr;

        Opcode opc = makeOperator(binop, lhs.get(), rhs.get());
        if (opc == Opcode::EXIT) {
          report_.typeError(
              lastLocation(),
              "Incompatible binary expression operands ({} {} {}).",
              lhs->getType(), binop, rhs->getType());
          return nullptr;
        }

        lhs = std::make_unique<BinaryExpr>(opc, std::move(lhs), std::move(rhs));
        break;
      }
      default:
        return lhs;
    }
  }
}

std::unique_ptr<Expr> Parser::mulExpr() {
  std::unique_ptr<Expr> lhs = powExpr();
  if (!lhs) return nullptr;

  for (;;) {
    switch (token()) {
      case Token::Mul:
      case Token::Div:
      case Token::Mod:
      case Token::Shl:
      case Token::Shr: {
        Token binop = token();
        nextToken();

        std::unique_ptr<Expr> rhs = powExpr();
        if (!rhs) return nullptr;

        Opcode opc = makeOperator(binop, lhs.get(), rhs.get());
        if (opc == Opcode::EXIT) {
          report_.typeError(
              lastLocation(),
              "Incompatible binary expression operands ({} {} {}).",
              lhs->getType(), binop, rhs->getType());
          return nullptr;
        }

        lhs = std::make_unique<BinaryExpr>(opc, std::move(lhs), std::move(rhs));
        break;
      }
      default:
        return lhs;
    }
  }
}

std::unique_ptr<Expr> Parser::powExpr() {
  // powExpr ::= negExpr ('**' powExpr)*
  SourceLocation sloc(location());
  std::unique_ptr<Expr> lhs = negExpr();
  if (!lhs) return nullptr;

  while (token() == Token::Pow) {
    nextToken();

    std::unique_ptr<Expr> rhs = powExpr();
    if (!rhs) return nullptr;

    auto opc = makeOperator(Token::Pow, lhs.get(), rhs.get());
    if (opc == Opcode::EXIT) {
      report_.typeError(
          lastLocation(),
          "Incompatible binary expression operands ({} {} {}).",
          lhs->getType(), Token::Pow, rhs->getType());
      return nullptr;
    }

    lhs = std::make_unique<BinaryExpr>(opc, std::move(lhs), std::move(rhs));
  }

  return lhs;
}

std::unique_ptr<Expr> Parser::negExpr() {
  // negExpr ::= ['-'] primaryExpr
  SourceLocation loc = location();

  if (consumeIf(Token::Minus)) {
    std::unique_ptr<Expr> e = negExpr();
    if (!e) return nullptr;

    Opcode op = makeOperator(Token::Minus, e.get());
    if (op == Opcode::EXIT) {
      report_.typeError(
          lastLocation(),
          "Type cast error in unary 'neg'-operator. Invalid source type <{}>.",
          e->getType());
      return nullptr;
    }

    e = std::make_unique<UnaryExpr>(op, std::move(e), loc.update(end()));
    return e;
  } else {
    return bitNotExpr();
  }
}

std::unique_ptr<Expr> Parser::bitNotExpr() {
  // negExpr ::= ['~'] primaryExpr
  SourceLocation loc = location();

  if (consumeIf(Token::BitNot)) {
    std::unique_ptr<Expr> e = bitNotExpr();
    if (!e) return nullptr;

    Opcode op = makeOperator(Token::BitNot, e.get());
    if (op == Opcode::EXIT) {
      report_.typeError(
          lastLocation(),
          "Type cast error in unary 'not'-operator. Invalid source type <{}>.",
          e->getType());
      return nullptr;
    }

    e = std::make_unique<UnaryExpr>(op, std::move(e), loc.update(end()));
    return e;
  } else {
    return primaryExpr();
  }
}

// primaryExpr ::= literalExpr
//               | variable
//               | function '(' paramList ')'
//               | '(' expr ')'
//               | '[' exprList ']'
std::unique_ptr<Expr> Parser::primaryExpr() {
  switch (token()) {
    case Token::String:
    case Token::RawString:
    case Token::Number:
    case Token::Boolean:
    case Token::IP:
    case Token::Cidr:
    case Token::RegExp:
    case Token::Div: // beginning of regexp
      return literalExpr();
    case Token::StringType:
    case Token::NumberType:
    case Token::BoolType:
      return castExpr();
    case Token::InterpolatedStringFragment:
      return interpolatedStr();
    case Token::Ident: {
      SourceLocation loc = location();
      std::string name = stringValue();
      nextToken();

      std::list<Symbol*> symbols;
      Symbol* symbol = currentScope()->lookup(name, Lookup::All, &symbols);
      if (!symbol) {
        // XXX assume that given symbol is a auto forward-declared handler.
        HandlerSym* href = (HandlerSym*)globalScope()->appendSymbol(
            std::make_unique<HandlerSym>(name, loc));
        return std::make_unique<HandlerRefExpr>(href, loc);
      }

      if (auto variable = dynamic_cast<VariableSym*>(symbol))
        return std::make_unique<VariableExpr>(variable, loc);

      if (auto handler = dynamic_cast<HandlerSym*>(symbol))
        return std::make_unique<HandlerRefExpr>(handler, loc);

      if (symbol->type() == Symbol::BuiltinFunction) {
        std::list<CallableSym*> callables;
        for (Symbol* s : symbols) {
          if (auto c = dynamic_cast<BuiltinFunctionSym*>(s)) {
            callables.push_back(c);
          }
        }

        ParamList params;
        // {{{ parse call params
        if (token() == Token::RndOpen) {
          nextToken();
          if (token() != Token::RndClose) {
            auto ra = paramList();
            if (!ra) {
              return nullptr;
            }
            params = std::move(*ra);
          }
          loc.end = lastLocation().end;
          if (!consume(Token::RndClose)) {
            return nullptr;
          }
        } else if (TokenTraits::isUnaryOp(token()) ||
                   TokenTraits::isLiteral(token()) ||
                   token() == Token::Ident ||
                   token() == Token::BrOpen ||
                   token() == Token::RndOpen) {
          auto ra = paramList();
          if (!ra) {
            return nullptr;
          }
          params = std::move(*ra);
          loc.end = params.location().end;
        }
        // }}}

        return resolve(callables, std::move(params));
      }

      report_.typeError(lastLocation(),
                        "Unsupported symbol type of \"{}\" in expression.",
                        name);
      return nullptr;
    }
    case Token::Begin: {  // lambda-like inline function ref
      static unsigned long i = 0;
      ++i;

      std::string name = fmt::format("__lambda_#{}", i);
      SourceLocation loc = location();
      std::unique_ptr<SymbolTable> st = enterScope(name);
      std::unique_ptr<Stmt> body = compoundStmt();
      leaveScope();

      if (!body)
        return nullptr;

      loc.update(body->location().end);

      HandlerSym* handler = static_cast<HandlerSym*>(currentScope()->appendSymbol(
          std::make_unique<HandlerSym>(name, std::move(st), std::move(body), loc)));

      return std::make_unique<HandlerRefExpr>(handler, loc);
    }
    case Token::RndOpen: {
      SourceLocation loc = location();
      nextToken();
      std::unique_ptr<Expr> e = expr();
      consume(Token::RndClose);
      if (e) {
        e->setLocation(loc.update(end()));
      }
      return e;
    }
    case Token::BrOpen:
      return arrayExpr();
    default:
      report_.syntaxError(lastLocation(), "Unexpected token {}", token());
      return nullptr;
  }
}

std::unique_ptr<Expr> Parser::arrayExpr() {
  SourceLocation loc = location();
  nextToken();  // '['
  std::vector<std::unique_ptr<Expr>> fields;

  if (token() != Token::BrClose) {
    auto e = expr();
    if (!e) return nullptr;

    fields.push_back(std::move(e));

    while (consumeIf(Token::Comma)) {
      e = expr();
      if (!e) return nullptr;

      fields.push_back(std::move(e));
    }
  }

  consume(Token::BrClose);

  if (!fields.empty()) {
    LiteralType baseType = fields.front()->getType();
    for (const auto& e : fields) {
      if (e->getType() != baseType) {
        report_.typeError(lastLocation(),
                          "Mixed element types in array not allowed.");
        return nullptr;
      }
    }

    switch (baseType) {
      case LiteralType::Number:
      case LiteralType::String:
      case LiteralType::IPAddress:
      case LiteralType::Cidr:
        break;
      default:
        report_.typeError(
            lastLocation(),
            "Invalid array expression. Element type {} is not allowed.",
            baseType);
        return nullptr;
    }
  } else {
    report_.typeError(
        lastLocation(),
        "Empty arrays are not allowed. Cannot infer element type.");
    return nullptr;
  }

  return std::make_unique<ArrayExpr>(loc.update(end()), std::move(fields));
}

std::unique_ptr<Expr> Parser::literalExpr() {
  // literalExpr  ::= NUMBER [UNIT]
  //                | BOOL
  //                | STRING
  //                | IP_ADDR
  //                | IP_CIDR
  //                | REGEXP

  static struct {
    const char* ident;
    long long nominator;
    long long denominator;
  } units[] = {{"byte", 1, 1},
               {"kbyte", 1024llu, 1},
               {"mbyte", 1024llu * 1024, 1},
               {"gbyte", 1024llu * 1024 * 1024, 1},
               {"tbyte", 1024llu * 1024 * 1024 * 1024, 1},
               {"bit", 1, 8},
               {"kbit", 1024llu, 8},
               {"mbit", 1024llu * 1024, 8},
               {"gbit", 1024llu * 1024 * 1024, 8},
               {"tbit", 1024llu * 1024 * 1024 * 1024, 8},
               {"sec", 1, 1},
               {"min", 60llu, 1},
               {"hour", 60llu * 60, 1},
               {"day", 60llu * 60 * 24, 1},
               {"week", 60llu * 60 * 24 * 7, 1},
               {"month", 60llu * 60 * 24 * 30, 1},
               {"year", 60llu * 60 * 24 * 365, 1},
               {nullptr, 1, 1}};

  SourceLocation loc(location());

  switch (token()) {
    case Token::Div: {  // /REGEX/
      if (lexer_->continueParseRegEx('/')) {
        auto e = std::make_unique<RegExpExpr>(util::RegExp(stringValue()),
                                              loc.update(end()));
        nextToken();
        return std::move(e);
      } else {
        report_.syntaxError(lastLocation(), "Error parsing regular expression.");
        return nullptr;
      }
    }
    case Token::Number: {  // NUMBER [UNIT]
      auto number = numberValue();
      nextToken();

      if (token() == Token::Ident) {
        std::string sv(stringValue());
        for (size_t i = 0; units[i].ident; ++i) {
          if (sv == units[i].ident ||
              (sv[sv.size() - 1] == 's' &&
               sv.substr(0, sv.size() - 1) == units[i].ident)) {
            nextToken();  // UNIT
            number = number * units[i].nominator / units[i].denominator;
            loc.update(end());
            break;
          }
        }
      }
      return std::make_unique<NumberExpr>(number, loc);
    }
    case Token::Boolean: {
      std::unique_ptr<BoolExpr> e =
          std::make_unique<BoolExpr>(booleanValue(), loc);
      nextToken();
      return std::move(e);
    }
    case Token::String:
    case Token::RawString: {
      std::unique_ptr<StringExpr> e =
          std::make_unique<StringExpr>(stringValue(), loc);
      nextToken();
      return std::move(e);
    }
    case Token::IP: {
      std::unique_ptr<IPAddressExpr> e =
          std::make_unique<IPAddressExpr>(lexer_->ipValue(), loc);
      nextToken();
      return std::move(e);
    }
    case Token::Cidr: {
      std::unique_ptr<CidrExpr> e =
          std::make_unique<CidrExpr>(lexer_->cidr(), loc);
      nextToken();
      return std::move(e);
    }
    case Token::RegExp: {
      std::unique_ptr<RegExpExpr> e =
          std::make_unique<RegExpExpr>(util::RegExp(stringValue()), loc);
      nextToken();
      return std::move(e);
    }
    default:
      report_.typeError(lastLocation(),
                        "Expected literal expression, but got {}.",
                        token());
      return nullptr;
  }
}

std::unique_ptr<ParamList> Parser::paramList() {
  // paramList       ::= namedExpr *(',' namedExpr)
  //                   | expr *(',' expr)

  if (token() == Token::NamedParam) {
    std::unique_ptr<ParamList> args = std::make_unique<ParamList>(true);
    std::string name;
    std::unique_ptr<Expr> e = namedExpr(&name);
    if (!e) return nullptr;

    args->push_back(name, std::move(e));

    while (token() == Token::Comma) {
      nextToken();

      if (token() == Token::RndClose) break;

      e = namedExpr(&name);
      if (!e) return nullptr;

      args->push_back(name, std::move(e));
    }
    return args;
  } else {
    // unnamed param list
    std::unique_ptr<ParamList> args = std::make_unique<ParamList>(false);

    std::unique_ptr<Expr> e = expr();
    if (!e) return nullptr;

    args->push_back(std::move(e));

    while (token() == Token::Comma) {
      nextToken();

      if (token() == Token::RndClose) break;

      e = expr();
      if (!e) return nullptr;

      args->push_back(std::move(e));
    }
    return args;
  }
}

std::unique_ptr<Expr> Parser::namedExpr(std::string* name) {
  // namedExpr       ::= NAMED_PARAM expr

  // FIXME: wtf? what way around?

  *name = stringValue();
  if (!consume(Token::NamedParam)) return nullptr;

  return expr();
}
